--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@ body {
   font-size: 15pt;
   background-size: cover;
   background-repeat: no-repeat !important;
+font-family: Tahoma;
+  
 }
 
 * {
