--- a/css/style.css
+++ b/css/style.css
@@ -10,9 +10,11 @@ body {
   margin: 0;
   padding: 0;
 }
-:root{
+
+:root {
   --NP_color: red;
 }
+
 .slider {
   background-image: url(../imgs/img0.jpg);
   height: 100vh;
@@ -58,30 +60,28 @@ body {
 
 .slider .container .Next,
 .slider .container .Prev {
+  bottom: 50px;
   position: absolute;
-  bottom: 25px;
-  border: 20px solid transparent;
-  z-index: 99;
+  display: block;
+  width: 50px;
+  height: 50px;
+  background: darkred;
+  color: #fff;
   cursor: pointer;
 }
 
 .slider .container .Next {
-  right: 5px;
-  border-left-color: var(--NP_color);
-  border-right: 0;
+  right: 0;
 
 }
 
 .slider .container .Prev {
-  left: 5px;
-  border-left: 0;
-  border-right-color: var(--NP_color);
+  left: 0;
 }
 
 @media (max-width: 668px) {
   .slider .container {
     width: 90%;
-
   }
 }
 
@@ -96,14 +96,14 @@ ul {
   flex-wrap: wrap;
   justify-content: space-around;
   position: absolute;
-  bottom: 20px;
+  bottom: 0;
   transform: translateX(-50%);
   left: 50%;
   background: #4FACBBD6;
   list-style: none;
-  width: 80%;
-  border-radius: 15px;
-  padding: 10px;
+  width: 75%;
+  border-radius: 5px;
+  padding: 5px;
 }
 
 ul li {
@@ -113,8 +113,11 @@ ul li {
   background: rgba(0, 0, 0, 0.7);
   color: #fff;
   cursor: pointer;
+  transition: .3s;
+  transform: scale(.8)
 }
 
 ul li.active {
-  background: #2EB55BD6;
+  background: darkred;
+  transform: scale(1.2)
 }
