--- a/css/style.css
+++ b/css/style.css
@@ -56,19 +56,23 @@ body {
   font-size: 18px;
   font-weight: bold;
   color: #fff;
+  z-index: 99;
   background-color: rgba(0, 0, 0, 0.7);
   border-radius: 1rem;
 }
 
 .slider .container .Next,
 .slider .container .Prev {
-  bottom: 50px;
+  top: 50%;
+  transform: translateY(-50%);
   position: absolute;
   display: block;
-  width: 50px;
-  height: 50px;
+  width: 30px;
+  height: 30px;
+  border-radius: 1em;
   background: darkred;
   color: #fff;
+  z-index: 99;
   cursor: pointer;
 }
 
@@ -87,40 +91,60 @@ body {
   }
 }
 
-img {
-  height: 100%;
-  width: 100%;
 
-}
 
 ul {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
   position: absolute;
   bottom: 0;
-  transform: translateX(-50%);
-  left: 50%;
+  left: 0;
   background: #4FACBBD6;
   list-style: none;
-  width: 75%;
   border-radius: 5px;
-  padding: 5px;
+  overflow-x: auto;
+  width: 100%;
+  padding: 0 5px;
+  z-index: 80;
+  white-space: nowrap;
 }
 
+
 ul li {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  margin: 5px;
   font-weight: bold;
   border-radius: 5px;
-  padding: 5px;
   background: rgba(0, 0, 0, 0.7);
   color: #fff;
   cursor: pointer;
+  overflow: auto;
   transition: .6s;
-  transform: scale(.7);
+  transform: scale(.8);
 }
+
 
 ul li.active {
   background: darkred;
-  transform: scale(1.2);
+  transform: scale(1);
   box-shadow: 0 0 0 1px lime;
+}
+
+img {
+  height: 100%;
+  width: 100%;
+}
+img:not(.m_img){
+  opacity: .2;
+    transform: scale(.8);
+}
+img.active {
+  animation: pop .5s both;
+}
+
+@keyframes pop {
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
