--- a/css/style.css
+++ b/css/style.css
@@ -41,8 +41,8 @@ body {
   transform: translate(-50%, -50%);
   border: 2px solid red;
   border-radius: 1rem;
-  height: 450px;
-  width: 550px;
+  height: 90vh;
+  width: 450px;
   overflow: hidden;
   z-index: 9;
 }
@@ -97,16 +97,16 @@ ul {
   position: absolute;
   bottom: 0;
   left: 0;
-  background: #4FACBBD6;
+  background: rgba(0, 0, 0, 0.4);
   list-style: none;
   border-radius: 5px;
   overflow-x: auto;
   width: 100%;
   padding: 0 5px;
   z-index: 80;
-display: flex;
-align-items: center;
-flex-flow: row nowrap
+  display: flex;
+  align-items: center;
+  flex-flow: row nowrap;
 }
 
 
@@ -121,14 +121,15 @@ ul li {
   color: #fff;
   cursor: pointer;
   overflow: hidden;
-  transition: .6s;
-  transform: scale(.8);
+  transition: 2s;
+  transform: scale(.5);
+  opacity: .4;
 }
 
 
 ul li.active {
-  background: darkred;
   transform: scale(1);
+  opacity: 1;
   box-shadow: 0 0 0 1px lime;
 }
 
@@ -136,10 +137,11 @@ img {
   height: 100%;
   width: 100%;
 }
-img:not(.m_img){
-  opacity: .2;
-    transform: scale(.8);
+
+img:not(.m_img) {
+  transform: scale(.8);
 }
+
 img.active {
   animation: pop .5s both;
 }
