--- a/css/style.css
+++ b/css/style.css
@@ -41,8 +41,8 @@ body {
   transform: translate(-50%, -50%);
   border: 2px solid red;
   border-radius: 1rem;
-  height: 90vh;
-  width: 450px;
+  height: 500px;
+  width: 400px;
   overflow: hidden;
   z-index: 9;
 }
@@ -87,7 +87,7 @@ body {
 
 @media (max-width: 668px) {
   .slider .container {
-    width: 90%;
+    width: 80%;
   }
 }
 
